--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,12 +2,21 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
+
+body{
+    background-color: #f6f8fc;
+}
 .content{
     padding: 1rem;
+    background-color: #fff;
+    height: 100vh;
+    width: 100vw;
 }
 @media screan and (min-width: 992px){
     .content{ max-width: 992px;
+        height: auto;
         margin: 0 auto;
+        border-radius: 1rem;
 
     }
 }
@@ -17,8 +26,27 @@
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     
+}
+@media screan and (min-width: 380px){
+    .pokemon-list{ 
+    
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screan and (min-width: 576px){
+    .pokemon-list{ 
+    
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screan and (min-width: 992px){
+    .pokemon-list{ 
+    
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
 
 .pokemon{
